# RK3588_yolov5detect_cpp

./: CMakeLists.txt  README.md
include/rknn/: rkYolov5s.hpp
install/lib/: libopencv_highgui.so.4.10.0  libopencv_imgcodecs.so.4.10.0  libopencv_ml.so.4.10.0  libopencv_objdetect.so.4.10.0  libopencv_photo.so.4.10.0  libopencv_stitching.so.4.10.0  libopencv_video.so.4.10.0  libopencv_videoio.so.4.10.0
lib/opencv/: libopencv_calib3d.so.4.10.0  libopencv_features2d.so.4.10.0  libopencv_flann.so.4.10.0  libopencv_highgui.so.4.10.0  libopencv_imgcodecs.so.4.10.0  libopencv_videoio.so.4.10.0
lib/opencv/cmake/opencv4/: OpenCVModules-release.cmake
src/: main.cc  postprocess.cc  rkYolov5s.cc
